--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
-
-@import url('fonts.css');
+@import url('https://fonts.googleapis.com/css?family=Abel')
+    @imprt url('https://fonts.googleapis.com/css?family=Anton')
+    @import url('https://fonts.googleapis.com/css?family=Livvic')
+     @import url('https://fonts.googleapis.com/css?family=Josefin')
+@import url('https://fonts.googleapis.com/css?family=Lexend')
 
 * {box-sizing:border-box}
 
