--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Abel')
     @imprt url('https://fonts.googleapis.com/css?family=Anton')
     @import url('https://fonts.googleapis.com/css?family=Livvic')
-     @import url('fonts.css')
+     @import url('https://fonts.googleapis.com/css?family=JosefinSans')
 @import url('https://fonts.googleapis.com/css?family=Lexend')
 
 * {box-sizing:border-box}
