--- a/style.css
+++ b/style.css
@@ -632,6 +632,10 @@ nav {
         margin-top:20px ;
 
     }
+    .rectangle-1{ 
+        margin-left:0px;}
+    .rectangle-2{ 
+        margin-left:0px;}
     .btn-learn2{
         margin-top:72rem;
         margin-left:-150px;
