--- a/fonts.css
+++ b/fonts.css
@@ -18,9 +18,9 @@
 }
 
 /*  font-family: Lexend  */
-/*@font-face {
+@font-face {
     font-family: Lexend;
-    src: url('../fonts/Lexend_Deca/LexendDeca-Regular.ttf');*/
+    src: url('../fonts/Lexend_Deca/LexendDeca-Regular.ttf');
 
 
 /*  font-family: Livvic  */
