--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ font-size:54px;
     text-align: center;
     bottom: 20%;
     color:white;
-    font-family:var(--JosefinSans);
+    font-family:var(--Josefin);
     padding-bottom:200px ;
 }
 .txt-img3{
